# LibraScan

./: .env  .gitignore  README.md  docker-compose.yml  env
backend/image_encoder/: Dockerfile
backend/image_encoder/app/: main.py
backend/predictor/: Dockerfile  pyproject.toml
backend/predictor/app/: database.py  main.py  model.py  utils.py
backend/text_encoder/: Dockerfile  pyproject.toml
backend/text_encoder/app/: main.py
frontend/: Dockerfile
frontend/app/: main_front.py
frontend/image-uploader/: Dockerfile  package-lock.json  package.json
frontend/image-uploader/public/: index.html
frontend/image-uploader/src/: App.jsx
init/: init.sql
train_model/: config.py  create_augmented_dataset.py  dataset.py  image_encoder.py  predictor.py  text_encoder.py  train.py
train_model/cache/: ocr_cache.json  ocr_cache_test.json
train_model/model/saved_models/: best_model_text_True_image_False.pth
train_model/results/: metrics_False_True.json  metrics_True_False.json  metrics_True_True.json
train_model/saved_models/: best_model_True_False.pth
